fix for covered dropdown on empty vault
This could be done one of 2-3 ways. I think this might be the least problematic, but could also be done with just changing "position: absolute" to "relative on the ".no-items" class - base.css:461 For some reason, I'm unable to load the spinner to test.

--- a/apps/browser/src/popup/scss/misc.scss
+++ b/apps/browser/src/popup/scss/misc.scss
@@ -135,6 +135,11 @@ p.lead {
   border-radius: $border-radius;
 }
 
+.z10 {
+  position: relative;
+  z-index: 10;
+}
+
 .sr-only {
   position: absolute !important;
   width: 1px !important;
